# Context-Aware-MR

./: .gitignore  rgb
KinFuSaveImage/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+375 more)
RenderingPlugin/: CMakeLists.txt  RenderingPlugin.cpp  RenderingPlugin.h  VideoCap.cpp  VideoCap.h
RenderingPlugin/Linux/: makefile
RenderingPlugin/UWPVisualStudio2015/: RenderingPlugin.vcxproj  RenderingPlugin.vcxproj.filters
RenderingPlugin/VisualStudio2013/: RenderingPlugin.vcxproj
RenderingPlugin/VisualStudio2013/Win32/Debug/: CL.read.1.tlog  CL.write.1.tlog  FXC.command.1.tlog  RenderingPlugin.exp  RenderingPlugin.lastbuildstate  RenderingPlugin.lib  RenderingPlugin.write.1.tlog  SimplePixelShader.cso  SimpleVertexShader.cso  cl.command.1.tlog  fxc.read.1.tlog  fxc.write.1.tlog  vc110.idb
RenderingPlugin/VisualStudio2013/x64/Release/: CL.read.1.tlog  CL.write.1.tlog  FXC.command.1.tlog  RenderingPlugin.exp  RenderingPlugin.lastbuildstate  RenderingPlugin.lib  RenderingPlugin.write.1.tlog  cl.command.1.tlog  fxc.read.1.tlog  fxc.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RenderingPlugin/VisualStudio2015/: RenderingPlugin.VC.db  RenderingPlugin.sln  RenderingPlugin.vcxproj
UnityProject/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  (+4 more)
(+1579 files in other folders)
